[package]
name = "wasmer-backend-api"
version = "0.601.0-rc.1"
description = "Client library for the Wasmer GraphQL API"
readme = "README.md"
documentation = "https://docs.rs/wasmer-backend-api"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Wasmer dependencies.
wasmer-config = { version = "0.601.0-rc.1", path = "../config" }
wasmer-package.workspace = true
webc.workspace = true

# crates.io dependencies.
reqwest = { workspace = true, default-features = false, features = ["json"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1.14"
time = { workspace = true, features = ["formatting", "parsing"] }
tokio.workspace = true
url = { workspace = true, features = ["serde"] }
futures = "0.3"
tracing.workspace = true
cynic = { version = "3.7.2", features = ["http-reqwest"] }
pin-project-lite = "0.2.10"
harsh = "0.2.2"
merge-streams = "0.1.2"


# Subscriptions. 
graphql-ws-client = { version = "0.11.0", features = [
	"tungstenite",
	"client-cynic",
], optional = true }
tokio-tungstenite = { workspace = true, features = [
	"rustls-tls-native-roots",
], optional = true }
async-tungstenite = { version = "0.28.0", features = [
	"tokio-runtime",
	"tokio-rustls-native-certs",
], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
workspace = true
features = ["js"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
base64.workspace = true
uuid = { version = "1", features = ["v4"] }

[features]

default = ["sys"]

sys = ["graphql-ws-client", "tokio-tungstenite", "async-tungstenite"]

js = []
