[package]
name = "wasmer-backend-api"
version = "0.601.0"
description = "Client library for the Wasmer GraphQL API"
readme = "README.md"
documentation = "https://docs.rs/wasmer-backend-api"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Wasmer dependencies.
wasmer-config = { version = "0.601.0", path = "../config" }
wasmer-package.workspace = true
webc.workspace = true

# crates.io dependencies.
reqwest = { workspace = true, default-features = false, features = ["json"] }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio.workspace = true
url = { workspace = true, features = ["serde"] }
futures.workspace = true
tracing = { workspace = true, default-features = true }
cynic = { workspace = true, features = ["http-reqwest"] }
pin-project-lite.workspace = true
harsh.workspace = true
merge-streams.workspace = true

# Subscriptions. 
graphql-ws-client = { workspace = true, features = [
	"tungstenite-0.24",
	"client-cynic",
], optional = true }
tokio-tungstenite = { workspace = true, features = [
	"rustls-tls-native-roots",
], optional = true }
async-tungstenite = { workspace = true, features = [
	"tokio-runtime",
	"tokio-rustls-native-certs",
], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
workspace = true
features = ["js"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
base64.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]

default = ["sys"]

sys = ["graphql-ws-client", "tokio-tungstenite", "async-tungstenite"]

js = []
