[package]
name = "wasmer-backend-cli"
description = "Wasmer CLI commands for interacting with the Wasmer backend."
version = "0.1.4"
documentation = "https://docs.rs/wasmer-edge-cli"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "wasmer-edge"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls", "tun-tap"]
rustls = ["reqwest/rustls-tls"]
tun-tap = [
    "dep:tun-tap",
    "libc",
    "virtual-net/tokio-tungstenite",
    "tokio-tungstenite",
    "mio",
    "futures-util",
    "bytes",
    "hex",
    "mac_address",
    "dep:interfaces",
]

[dependencies]
wasmer-api = { version = "=0.0.23", path = "../backend-api" }
edge-schema = { version = "=0.0.2" }
edge-util = { version = "=0.0.1" }

#wasmer
virtual-net = "0.6.1"
virtual-mio = "0.3.0"

uuid = { version = "1.3.0", features = ["v4"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
futures = "0.3.25"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.8.26"
serde_json = "1.0.89"
toml = "0.7.2"
tracing = "0.1.37"
url = "2.3.1"
webc = "5.0.0"
serde = "1.0.152"
reqwest = { version = "0.11.17", default-features = false, features = ["gzip"] }
wasmer-registry = { version = ">= 5.4, <6", features = ["build-package"] }
wasmer-toml = "0.9.0"
dialoguer = "0.11.0"
is-terminal = "0.4.3"
semver = "1.0.17"
comfy-table = "7.0.1"
clap-verbosity-flag = "2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
log = "0.4.17"
regex = "1.7.3"
once_cell = "1.13"
colored = "2.0.4"
libc = { version = "0.2", optional = true }
parking_lot = "0.12"
interfaces = { version = "0.0.9", optional = true }

# Used by tuntap and connect
bytes = { version = "1.1", optional = true }
futures-util = { version = "0.3", optional = true }
mio = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.20.1", features = [
    "rustls-tls-webpki-roots",
], optional = true }
hex = { version = "0.4", optional = true }
mac_address = { version = "1.1.5", optional = true }
tun-tap = { version = "0.1.3", features = ["tokio"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.6"
