[package]
name = "wasmer-c-api-imports"
description = "Host imports for WebAssembly C API guests"
categories = ["wasm", "api-bindings"]
keywords = ["wasm", "webassembly", "runtime"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
wasmer-api = { version = "=7.2.0", path = "../api", default-features = false, package = "wasmer" }

[dev-dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
], default-features = false }
wasmer-types = { version = "=7.2.0", path = "../types" }
wasmer-wasix = { path = "../wasix", version = "=0.702.0", features = [
  "host-fs",
  "host-vnet",
  "sys",
], default-features = false }
wat.workspace = true

[features]
default = ["wat", "sys-default", "cranelift", "compiler"]
wat = ["wasmer-api/wat"]

sys = ["wasmer-api/sys"]
singlepass = ["wasmer-api/singlepass", "compiler"]
cranelift = ["wasmer-api/cranelift", "compiler"]
llvm = ["wasmer-api/llvm", "compiler"]
compiler = ["sys", "wasmer-api/compiler"]
v8 = ["wasmer-api/v8"]
sys-default = ["sys", "wasmer-api/sys-default"]
v8-default = ["v8", "wasmer-api/v8-default"]
wasi = []

wasmer-artifact-load = ["wasmer-api/wasmer-artifact-load"]
wasmer-artifact-create = ["wasmer-api/wasmer-artifact-create"]
static-artifact-load = ["wasmer-api/static-artifact-load"]
static-artifact-create = ["wasmer-api/static-artifact-create"]
