[package]
name = "wasmer-c-api"
description = "Wasmer C API library"
categories = ["wasm", "api-bindings"]
keywords = ["wasm", "webassembly", "runtime"]
documentation = "https://wasmerio.github.io/wasmer/c-api/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# The library name is `wasmer` so that we generate dylib like
# `libwasmer.so`, `libwasmer.dylib`, `wasmer.dll` etc. But it creates
# a conflict with the existing `wasmer` crate, see below.
name = "wasmer" # ##lib.name##
                # ^ DO NOT REMOVE, it's used the `Makefile`, see `build-docs-capi`.
crate-type = ["staticlib", "cdylib"] #"cdylib", "rlib", "staticlib"]

[dependencies]
# We rename `wasmer` to `wasmer-api` to avoid the conflict with this
# library name (see `[lib]`).
wasmer-api = { version = "=4.2.8", path = "../api", default-features = false, package = "wasmer" }
wasmer-compiler = { version = "=4.2.8", path = "../compiler", optional = true }
wasmer-compiler-cranelift = { version = "=4.2.8", path = "../compiler-cranelift", optional = true }
wasmer-compiler-llvm = { version = "=4.2.8", path = "../compiler-llvm", optional = true }
wasmer-compiler-singlepass = { version = "=4.2.8", path = "../compiler-singlepass", optional = true }
wasmer-emscripten = { version = "=4.2.8", path = "../emscripten", optional = true }
wasmer-middlewares = { version = "=4.2.8", path = "../middlewares", optional = true }
wasmer-types = { version = "=4.2.8", path = "../types" }
wasmer-wasix = { version = "0.18.3", path = "../wasix", features = ["host-fs", "host-vnet"], optional = true }
webc = { version = "5.0", optional = true }
virtual-fs = { version = "0.11.2", path = "../virtual-fs", optional = true, default-features = false, features = ["static-fs"] }
enumset.workspace = true
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
thiserror = "1"
typetag = { version = "0.1", optional = true }
paste = "1.0"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "io-util", "sync", "macros"], default_features = false }

[dev-dependencies]
field-offset = "0.3.3"

[target.'cfg(target_os = "windows")'.dev-dependencies]
wasmer-inline-c = "0.1.1"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
inline-c = "0.1.7"

[features]
default = [
    "wat",
    "cranelift",
    "compiler",
    "wasi",
    "middlewares",
]
sys = []
jsc = ["wasmer-api/jsc", "wasmer-api/std"]
wat = ["wasmer-api/wat"]
wasi = ["wasmer-wasix"]
middlewares = [
    "compiler",
    "wasmer-middlewares",
]
compiler = [
    "wasmer-compiler",
    "wasmer-api/compiler",
    "wasmer-compiler/translator",
    "wasmer-compiler/compiler",
]
compiler-headless = [
    "wasmer-artifact-load",
    "static-artifact-load",
    "wasmer-api/compiler",
    "wasmer-compiler/translator",
    "wasmer-compiler/compiler",
]
singlepass = [
    "wasmer-compiler-singlepass",
    "compiler",
]
cranelift = [
    "wasmer-compiler-cranelift",
    "compiler",
]
llvm = [
    "wasmer-compiler-llvm",
    "compiler",
]
wasmer-artifact-load = ["wasmer-compiler/wasmer-artifact-load"]
wasmer-artifact-create = ["wasmer-compiler/wasmer-artifact-create"]
static-artifact-load = ["wasmer-compiler/static-artifact-load"]
static-artifact-create = ["wasmer-compiler/static-artifact-create"]
webc_runner = ["virtual-fs", "webc"]
# Deprecated features.
jit = ["compiler"]

# TODO: Port this feature.
#emscripten = ["wasmer-emscripten"]

[build-dependencies]
cbindgen = { version = "0.24", default-features = false }
