[package]
name = "wasmer-c-api"
description = "Wasmer C API library"
categories = ["wasm", "api-bindings"]
keywords = ["wasm", "webassembly", "runtime"]
documentation = "https://wasmerio.github.io/wasmer/c-api/"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# The library name is `wasmer` so that we generate dylib like
# `libwasmer.so`, `libwasmer.dylib`, `wasmer.dll` etc. But it creates
# a conflict with the existing `wasmer` crate, see below.
name = "wasmer" # ##lib.name##
                # ^ DO NOT REMOVE, it's used the `Makefile`, see `build-docs-capi`.
crate-type = ["staticlib", "cdylib"] #"cdylib", "rlib", "staticlib"]

[dependencies]
# We rename `wasmer` to `wasmer-api` to avoid the conflict with this
# library name (see `[lib]`).
wasmer-api = { version = "=6.0.0-alpha.1", path = "../api", default-features = false, package = "wasmer" }
wasmer-compiler = { version = "=6.0.0-alpha.1", path = "../compiler", optional = true }
wasmer-compiler-cranelift = { version = "=6.0.0-alpha.1", path = "../compiler-cranelift", optional = true }
wasmer-compiler-llvm = { version = "=6.0.0-alpha.1", path = "../compiler-llvm", optional = true }
wasmer-compiler-singlepass = { version = "=6.0.0-alpha.1", path = "../compiler-singlepass", optional = true }
wasmer-middlewares = { version = "=6.0.0-alpha.1", path = "../middlewares", optional = true }
wasmer-types = { version = "=6.0.0-alpha.1", path = "../types" }
wasmer-wasix = { path = "../wasix", version="=0.36.0", features = ["host-fs", "host-vnet"], optional = true }
webc = { workspace = true, optional = true }
virtual-fs = { version = "0.22.0", path = "../virtual-fs", optional = true, default-features = false, features = ["static-fs"] }
enumset.workspace = true
cfg-if = "1.0"
libc.workspace = true
thiserror = "1"
typetag = { version = "0.1", optional = true }
paste = "1.0"
tokio = { workspace = true, features = [ "rt", "rt-multi-thread", "io-util", "sync", "macros"], default-features = false }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"fmt",
] }

[dev-dependencies]
field-offset = "0.3.3"

[target.'cfg(target_os = "windows")'.dev-dependencies]
wasmer-inline-c = "0.1.1"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
inline-c = "0.1.7"

[features]
default = [
    "wat",
    "cranelift",
    "compiler",
    "wasi",
    "middlewares",
]
sys = []
jsc = ["wasmer-api/jsc", "wasmer-api/std"]
wat = ["wasmer-api/wat"]
wasi = ["wasmer-wasix"]
middlewares = [
    "compiler",
    "wasmer-middlewares",
]
compiler = [
    "wasmer-compiler",
    "wasmer-api/compiler",
    "wasmer-compiler/translator",
    "wasmer-compiler/compiler",
]
compiler-headless = [
    "wasmer-artifact-load",
    "static-artifact-load",
    "wasmer-api/compiler",
    "wasmer-compiler/translator",
    "wasmer-compiler/compiler",
]
singlepass = [
    "wasmer-compiler-singlepass",
    "compiler",
]
cranelift = [
    "wasmer-compiler-cranelift",
    "compiler",
]
llvm = [
    "wasmer-compiler-llvm",
    "compiler",
]

############
# WARNING! #
############
# These features are here but, for now (wasmer 6.0.0-alpha1) they do nothing.
# In the next alpha release they will be wired up to use the matching backend.
# These features are being added now to make CI easier, since we will
# nonetheless have to add them later.

v8 = []
wasmi = []
wamr = []

############
############

wasmer-artifact-load = ["wasmer-compiler/wasmer-artifact-load"]
wasmer-artifact-create = ["wasmer-compiler/wasmer-artifact-create"]
static-artifact-load = ["wasmer-compiler/static-artifact-load"]
static-artifact-create = ["wasmer-compiler/static-artifact-create"]
webc_runner = ["virtual-fs", "webc"]
# Deprecated features.
jit = ["compiler"]

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }
