[package]
name = "wasmer-cache"
description = "Cache system for Wasmer WebAssembly runtime"
categories = ["wasm", "caching"]
keywords = ["wasm", "webassembly", "cache"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer = { path = "../api", version = "=6.1.0-rc.1", default-features = false }
hex.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
clap = { version = "=4.4.11" }
clap_builder = { version = "=4.4.11" }
clap_derive = { version = "=4.4.7" }
clap_lex = { version = "=0.6.0" }
tempfile.workspace = true
rand = "0.8.3"
wasmer = { path = "../api", version = "=6.1.0-rc.1", default-features = false, features = ["sys", "cranelift"] }
wasmer-compiler-singlepass = { path = "../compiler-singlepass", version = "=6.1.0-rc.1" }

[features]
default = ["filesystem"]
filesystem = []
blake3-pure = ["blake3/pure"]

[package.metadata.docs.rs]
features = ["wasmer/sys", "wasmer/compiler"]
rustc-args = ["--cfg", "docsrs"]
