[package]
name = "wasmer-cache"
description = "Cache system for Wasmer WebAssembly runtime"
categories = ["wasm", "caching"]
keywords = ["wasm", "webassembly", "cache"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer = { workspace = true, default-features = false }
hex.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
criterion = { workspace = true, default-features = false }
clap.workspace = true
clap_builder.workspace = true
clap_derive.workspace = true
clap_lex.workspace = true
tempfile.workspace = true
rand.workspace = true
wasmer = { workspace = true, default-features = false, features = ["sys", "cranelift"] }
wasmer-compiler-singlepass.workspace = true

[features]
default = ["filesystem"]
filesystem = []
blake3-pure = ["blake3/pure"]

[package.metadata.docs.rs]
features = ["wasmer/sys", "wasmer/compiler"]
rustc-args = ["--cfg", "docsrs"]
